[package]
name = "thread-count"
version = "0.1.0"
authors = ["Yuhao Fang <fangyuhao@gmail.com>"]
license = "MIT"
build = "build.rs"
edition = "2018"
exclude = ["artifacts.json", "index.node"]

[lib]
name = "thread_count"
crate-type = ["cdylib"]

[build-dependencies]
neon-build = "0.3.1"

[dependencies]
neon = "0.3.1"
num_cpus = "1.10.1"
lazy_static = "1.4.0"
